# qualiteca

./: .gitignore  pyproject.toml
.streamlit/: config.toml
qualiteca/: app.py  models.py  teste.ipynb
qualiteca/container/: container_estilizado.py
qualiteca/paginas/: dados.py  emprestimos.py  estante.py  home.py  pessoas.py
